# github-action-benchmark

./: .codecov.yml  .coderabbit.yaml  .eslintrc.json  .gitignore  .gitpod.dockerfile  .gitpod.yml  .prettierignore  .prettierrc.json  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LEGACY_README.md  LICENSE.txt  README.m  README.md  action-types.yml  action.js  action.sh  action.yml  config.js  config.ts  default_index_html.js  default_index_html.ts  extract.js  extract.ts  foo.js  git.js  git.ts  index.js  index.ts  jest.config.js  octokit_graphql.d.ts  package-lock.json  package.json  tsconfig.build.json  tsconfig.build.json-java-js.js  tsconfig.json  tsconfig.spec.json  write.js  (+1 more)
.github/workflows/: benchmarkdotnet.yml  (+29 more)
build_rust.r/: tsconfig.json
examples/cabal/: Fibber.hs  README.md  fibber.cabal
examples/catch2_v2/: CMakeLists.txt  README.md  catch2_bench.cpp  fib.hpp
scripts/: ci_validate_modification.ts  prepare-release.sh
src/: addBenchmarkEntry.ts  canonicalizeUnit.ts  config.js  config.ts  default_index_html.js  default_index_html.ts  extract.js  extract.ts  extractRangeInfo.ts  git.js  git.ts  gitGraph.ts  index.ts  index_local.ts  normalizeBenchmark.ts  normalizeBenchmarkResult.ts  normalizeUnit.ts  normalizeValueByUnit.ts  notoken.ts  nyrkio.ts  nyrkioClient.ts  write.js  write.ts
test/: addBenchmarkEntryGitGraph.test.ts  buildComment.test.ts  config.spec.ts  config.ts  default_index_html.spec.ts  default_index_html.ts  extract.spec.ts  extract.ts  extractGoResult.spec.ts  extractRangeInfo.spec.ts  extract_only.spec.ts  fakedOctokit.ts  git.spec.ts  git.ts  gitGraphAnalyzer.test.ts  normalizeBenchmarkResult.spec.ts  normalizeUnit.spec.ts  normalizeValueByUnit.spec.ts  write.spec.ts  write.ts
(+140 files in other folders)
